--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Especialmente para ti</title>
-    <!-- Bootstrap CDN -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <!-- Swiper.js CDN -->
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Swiper.js -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins&display=swap" rel="stylesheet">
@@ -16,8 +17,8 @@
             font-family: 'Poppins', sans-serif;
             background-color: #ffeef8;
             color: #333;
+            padding: 20px;
             text-align: center;
-            padding-bottom: 50px;
         }
 
         h1, h2 {
@@ -26,12 +27,12 @@
         }
 
         .swiper {
-            width: 90%;
+            width: 100%;
             max-width: 600px;
-            height: 400px;
+            height: 350px;
             margin: 20px auto;
-            box-shadow: 0 5px 10px rgba(0,0,0,0.2);
             border-radius: 15px;
+            box-shadow: 0 5px 10px rgba(0,0,0,0.2);
         }
 
         .swiper-slide img,
@@ -55,13 +56,23 @@
         .btn-love:hover {
             transform: scale(1.1);
         }
+
+        @media (max-width: 768px) {
+            .swiper {
+                height: 250px;
+            }
+        }
     </style>
 </head>
 
 <body>
-    <h1 class="mt-4">¡Feliz Día de la Mujer!</h1>
+    <h1>¡Feliz Día de la Mujer!</h1>
     <h2>Eres única y especial</h2>
-    <p class="mt-4">Sé que últimamente no he sido la mejor versión de mí mismo.<br> Perdóname por mis fallas y gracias por tu paciencia infinita.<br> Prometo esforzarme para ser la pareja que mereces, porque eres lo más importante para mí.</p>
+    <p>
+        Sé que últimamente no he sido la mejor versión de mí mismo.<br>
+        Perdóname por mis fallas y gracias por tu paciencia infinita.<br>
+        Prometo esforzarme para ser la pareja que mereces, porque eres lo más importante para mí.
+    </p>
 
     <!-- Carrusel Swiper -->
     <div class="swiper">
@@ -85,55 +96,57 @@
                     <source src="video3.mp4" type="video/mp4">
                 </video>
             </div>
-            <div class="swiper-slide"><img src="foto4.jpg"></div>
+            <div class="swiper-slide"><img src="foto5.jpg"></div>
             <div class="swiper-slide">
                 <video autoplay muted loop>
                     <source src="video4.mp4" type="video/mp4">
                 </video>
             </div>
-            <div class="swiper-slide"><img src="foto5.jpg"></div>
         </div>
         <div class="swiper-pagination"></div>
     </div>
 
-    <!-- Botón que abre la carta modal -->
+    <!-- Botón para abrir el modal -->
     <button class="btn-love mt-4" data-bs-toggle="modal" data-bs-target="#cartaModal">
         Quiero hacerte feliz cada día ❤️
     </button>
 
-    <!-- Modal con Carta de Amor -->
+    <!-- Modal con la carta de amor -->
     <div class="modal fade" id="cartaModal" tabindex="-1">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-3">Carta para el amor de mi vida</h1>
+                    <h2 class="modal-title">Carta para la mujer que amo</h2>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
                     <p>
                         Mi amor,<br><br>
                         Hoy quiero aprovechar este día especial para decirte lo mucho que te amo y lo importante que eres en mi vida.<br><br>
-                        Sé que he cometido errores y quizás no he sido el hombre que mereces en algunos momentos, pero quiero que sepas que estoy decidido a cambiar, porque perderte sería perder lo más valioso que tengo.<br><br>
-                        Gracias por estar conmigo, por tu comprensión, tu cariño y sobre todo, por hacer de mi vida algo hermoso todos los días.<br><br>
-                        Te amo profundamente y prometo valorarte como mereces cada día más.
+                        Sé que he cometido errores, y te agradezco infinitamente por tu paciencia, amor y comprensión.<br>
+                        Prometo mejorar cada día para hacerte feliz como mereces. Eres mi compañera perfecta, mi amiga y la mujer que más admiro en el mundo.<br><br>
+                        Gracias por existir y hacer mi vida especial.<br>
+                        ¡Te amo con toda mi alma!
                     </p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                    <button class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                 </div>
             </div>
         </div>
+    </div>
 
     <!-- Audio -->
     <audio id="miCancion" loop>
         <source src="solamente_tu.mp3" type="audio/mpeg">
     </audio>
 
-    <!-- JS -->
+    <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
     <script>
-        // Inicia el carrusel
+        // Inicializar Swiper
         const swiper = new Swiper('.swiper', {
             loop: true,
             autoplay: {
@@ -146,23 +159,21 @@
             },
         });
 
-        // Reproduce música al cargar la página o al primer clic
+        // Reproducción automática de audio optimizada
         document.addEventListener("DOMContentLoaded", () => {
             const audio = document.getElementById("miCancion");
-            audio.play().catch(() => {
-                const activarMusica = () => {
-                    audio.play();
-                    document.body.removeEventListener('click', activarMusica);
-                };
-                document.body.addEventListener('click', activarMusica, {once: true});
-            });
+            setTimeout(() => {
+                audio.play().catch(() => {
+                    const activarMusica = () => {
+                        audio.play();
+                        document.body.removeEventListener('touchstart', activarMusica);
+                        document.body.removeEventListener('mouseover', activarMusica);
+                    };
+                    document.body.addEventListener('touchstart', activarMusica, {once: true});
+                    document.body.addEventListener('mouseover', activarMusica, {once: true});
+                });
+            }, 500);
         });
     </script>
-
-    <!-- Audio -->
-    <audio id="miCancion" loop>
-        <source src="public/musica/solamente_tu.mp3" type="audio/mpeg">
-    </audio>
 </body>
-
 </html>
